[package]
name = "ajidamal"
version = "0.1.0"
authors = ["Hunter Leath <h@hunterleath.com>"]

[dependencies]
serial = "0.4"
futures = "0.1.14"
hyper = "0.11"
tokio-core = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rusttype = "0.2.1"
framebuffer = "0.1.6"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.nom]
version = "^3.2"
