[package]
name = "ajidamal"
version = "0.1.0"
authors = ["Hunter Leath <h@hunterleath.com>"]

[dependencies]
# Dependencies for the GSM module
serial = "0.4"

# Dependencies for the HTTP Servers
futures = "0.1.14"
hyper = "0.11"
tokio-core = "0.1"

# Dependencies for Serialization
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# Dependencies for the Display
rusttype = "0.2.1"
framebuffer = "0.1.6"

# Dependencies for the Emulator
x11 = { version = "2.17.0", features = ["xlib"], optional = true }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.nom]
version = "^3.2"

[features]
deafult = []

# The `simulator` feature allows for development without the actual
# hardware present.
simulator = ["x11"]
